mdapioutput/objects/CTPHARMA__ActivityData__c.object
<CustomObject>
    <fields>
        <fullName>After_sales_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_new_models__c</fullName>
        <label>Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_of_terminals__c</fullName>
        <label>Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>inventory</fullName>
        <active>true</active>
        <label>inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>new_models</fullName>
        <active>true</active>
        <label>new models</label>
    </recordTypes>
    <recordTypes>
        <fullName>order_supplies</fullName>
        <active>true</active>
        <label>order supplies</label>
    </recordTypes>
</CustomObject>